# xorav

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/compression-test/: CMakeLists.txt  main.c
examples/dns-http-get/: CMakeLists.txt  main.c
examples/dns-resolver/: CMakeLists.txt  main.c
examples/headers-test/: CMakeLists.txt  main.c
lib/inc/: xorav_alloc.h  xorav_error.h  xorav_lib.h  xorav_packages.h
xorav/: CMakeLists.txt
xorav/inc/: xorav_dns_ares.h  xorav_http_client.h  xorav_http_compress.h  xorav_http_config.h  xorav_http_headers.h
xorav/src/: xorav_dns_ares.c  xorav_http_client.c  xorav_http_compress.c  xorav_http_config.c  xorav_http_headers.c
